[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "options-alpha"
version = "0.1.0"
description = "Citadel-grade quantitative options buying framework with 20 institutional strategies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Options Alpha Research", email = "research@options-alpha.io" }
]
keywords = ["options", "quantitative finance", "algorithmic trading", "derivatives", "volatility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "rich>=13.0",         # Beautiful CLI output
    "click>=8.1",         # CLI framework
    "structlog>=23.0",    # Structured logging
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.6",
    "pre-commit>=3.5",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
data = [
    "polygon-api-client>=1.12",
    "alpaca-trade-api>=3.0",
    "pyarrow>=13.0",          # Parquet support
    "requests>=2.31",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[project.scripts]
options-alpha-backtest = "options_alpha.scripts.run_backtest:main"
options-alpha-optimize = "options_alpha.scripts.optimize_params:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/options_alpha --cov-report=term-missing"
